# GObject-Plugin

./: .gitmodules  CMakeLists.txt  README  valadoc_env
cpack/: CMakeLists.txt
pkg-config/: CMakeLists.txt
po/langs/: CMakeLists.txt
po/langs/ru/: CMakeLists.txt
src/: CMakeLists.txt
src/host-iface/: CMakeLists.txt
src/iface/: CMakeLists.txt  HostInterface.vala  PluginInterface.vala
src/loader/: CMakeLists.txt  PluginLoader.vala
src/plugin-iface/: CMakeLists.txt  PluginInterface.vala
test/: CMakeLists.txt
test/loader_test/: CMakeLists.txt  LoaderTest.vala
test/loader_test-iface/: CMakeLists.txt  LoaderTestInterface.vala
test/plugins/: CMakeLists.txt
test/plugins/typeA/: CMakeLists.txt
test/plugins/typeA/typeA1/: CMakeLists.txt  TypeA1.vala
test/plugins/typeA/typeA2/: CMakeLists.txt  TypeA2.vala
test/plugins/typeB/: CMakeLists.txt
test/plugins/typeB/typeB1/: CMakeLists.txt  TypeB1.vala
test/plugins/typeB/typeB2/: CMakeLists.txt  TypeB2.vala
util/: update-po.sh  valadoc.sh
